# Blunderfish

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
blunderfish/: CMakeLists.txt
blunderfish/meta/: bin_to_header.cpp  nnue_embed.py  precompute_tables.cpp
blunderfish/meta/ui/: enums.py
blunderfish/src/: blunderfish.h  common.h  engine.cpp  engine_module.cpp  eval.cpp  move.cpp  nnue.cpp  perft.cpp  position.cpp  search.cpp  zobrist.cpp
blunderfish/src/opening book/: polyglot.cpp
blunderfish/src/opening_book/: polyglot.cpp
cli/: CMakeLists.txt  main.cpp
datagen/: CMakeLists.txt  datagen.cpp
eval/: CMakeLists.txt  eval.cpp
meta/: precompute_tables.cpp  precompute_tables.py
meta/ui/: app.py  engine.cp313-win_amd64.pyd  helper.py  script.py  setup.py
meta/ui/static/: index.css
meta/ui/templates/: index.html
nnue/: .gitignore  aggregate.py  data_loader.cpp  fens.py  model.py  nn.py  serialize.py  test.py  train.py
opening_gen/: CMakeLists.txt  opening_gen.cpp
spsa/: CMakeLists.txt  openings.h  spsa.cpp
src/: blunderfish.h  common.h  engine.cpp  engine_module.cpp  eval.cpp  main.cpp  move.cpp  position.cpp  position.h  search.cpp
tests/: CMakeLists.txt  test_best_move.cpp  test_eval.cpp  test_fen.cpp  test_misc.cpp  test_perft.cpp  test_polyglot.cpp  test_pruning.cpp  test_zobrist.cpp
uci/: CMakeLists.txt  uci.cpp
webui/: index.html  package-lock.json  package.json  styles.css  vite.config.js
webui/server/: server.js
webui/src/: main.js
